--- a/style.css
+++ b/style.css
@@ -2044,7 +2044,7 @@ span.backtotop { float: right; margin: 10px 0px; }
 .cart-sec i {margin: 0 5px 0 0;}
 .navigation ul > li > a i {margin: 0 10px 0 0;}
 
-/* ===== CUSTOM STYLES ====== */
+/* ===== CUSTOM STYLES ====== test */
 
 .top-bar {
 	display: none;
