--- a/style_ORIG.css
+++ b/style_ORIG.css
@@ -847,8 +847,8 @@ td {
     color: #ffffff;
     float: left;
     font-size: 16px;
-    font-weight: bold;
-    padding: 5px 10px;
+    font-weight: 400;
+    padding: 20px 17px;
     text-transform: uppercase;
 }
 .navigation ul li:first-child a {
@@ -860,12 +860,12 @@ td {
 /* Sub Menu Css */
 
 .dropdown-menu {
-    -moz-transform: translateY(-20px);
+    -moz-transform: translateX(20px);
     -moz-transition: all 0.3s ease-in-out;
-    -ms-transform: translateY(-20px);
-    -o-transform: translateY(-20px);
+    -ms-transform: translateX(20px);
+    -o-transform: translateX(20px);
     -o-transition: all 0.3s ease-in-out;
-    -webkit-transform: translateX(-20px);
+    -webkit-transform: translateX(20px);
     -webkit-transition: opacity 0.3s ease-out 100ms;
     background-color: #f8f8f8;
     left: 0px;
@@ -873,19 +873,19 @@ td {
     opacity: 0;
     position: absolute;
     top: 100%;
-    transform: translateY(-20px);
+    transform: translateX(20px);
     transition: all 0.3s ease-in-out;
     visibility: hidden;
     width: 199px;
     z-index: 99;
 }
 .navigation ul li:hover > .dropdown-menu {
-    -moz-transform: translateY(0px);
-    -ms-transform: translateY(0px);
-    -o-transform: translateY(0px);
-    -webkit-transform: translateY(0px);
+    -moz-transform: translateX(0px);
+    -ms-transform: translateX(0px);
+    -o-transform: translateX(0px);
+    -webkit-transform: translateX(0px);
     opacity: 1;
-    transform: translateY(0px);
+    transform: translateX(0px);
     visibility: visible;
 }
 .dropdown-menu li {
@@ -908,7 +908,7 @@ td {
 }
 .navigation ul .dropdown-menu > li:nth-child(odd) > a,
 .navigation ul .dropdown-menu ul > li:nth-child(odd) > a {
-    background-color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.03);
 }
 .dropdown-menu .parentIcon > a:before {
     content: "\f105";
@@ -10120,62 +10120,17 @@ h1 {
 .navigation ul > li > a i {
     margin: 0 10px 0 0;
 }
+/* ===== CUSTOM STYLES ====== test */
 
-
-/*
-   _____          _                     _____ _         _            
-  / ____|        | |                   / ____| |       | |           
- | |    _   _ ___| |_ ___  _ __ ___   | (___ | |_ _   _| | ___  ___  
- | |   | | | / __| __/ _ \| '_ ` _ \   \___ \| __| | | | |/ _ \/ __| 
- | |___| |_| \__ \ || (_) | | | | | |  ____) | |_| |_| | |  __/\__ \ 
-  \_____\__,_|___/\__\___/|_| |_| |_| |_____/ \__|\__, |_|\___||___/ 
-                                                   __/ |             
-                                                  |___/              
-*/
-
-/* TOP NAV CTA */
-nav.top-nav { 
-	float: right;
+.top-bar {
+    display: none;
 }
-.top-nav ul li:last-child {
-  padding-right: 0;
-}
-
-.menu-cta-menu li a {
-  background-color: #515254;
-  color: #ffffff;
-  padding: 7px 20px;
-  font-size: 15px;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-
-/* MAIN NAV */
-.main-navbar nav.navigation {
-	float: right;
-	margin-top: 15px;
+.metaslider-nivo {
+    margin: 20px 0px;
 }
 .logo-section .main-navbar {
 	background: none!important;
 }
 .logo-section .main-navbar ul.navbar-nav li.menu-item a {
-	font-weight: bold!important;	
+	color: #000000!important;
 }
-.logo-section .main-navbar ul.navbar-nav li.menu-item:last-child a {
-  padding-right: 0px;
-}
-
-/* SLIDER */
-.metaslider-nivo {
-    margin: 20px 0px;
-}
-
-/* CONTENT */
-.breadcrumb-sec {
-	display: none;
-}
-main#main-content { /* add top margin for header */ 
-	margin-top: 115px;
-}
-
