--- a/include/assets/css/admin_style.css
+++ b/include/assets/css/admin_style.css
@@ -500,7 +500,8 @@ a {
 	padding: 20px 20px;
 	margin: 0;
 	position:relative;
-	border-bottom:#eaeaea solid 1px;
+	border-top:#eaeaea solid 1px;
+	border-bottom: none;
 }
 .form-elements li {
 	float:left;
@@ -1269,7 +1270,7 @@ li.to-field .social-preview span.so-icon {
 /* Gallery
 ================================================== */
 .gal-active {
-	float: left;
+	float: right;
 	width: 100%;
 	padding-bottom: 10px;
     padding-left: 235px;
@@ -5542,3 +5543,20 @@ Backend Rtl Styling
 .rtl .bcevent_title li .input-sec {margin: 0 0 0 10px;}
 .rtl #price_remove {padding: 8px 10px 0 0;}
 .rtl .widget.widget_search form label input[type="submit"] {}
+
+
+/*
+   _____          _                     _____ _         _            
+  / ____|        | |                   / ____| |       | |           
+ | |    _   _ ___| |_ ___  _ __ ___   | (___ | |_ _   _| | ___  ___  
+ | |   | | | / __| __/ _ \| '_ ` _ \   \___ \| __| | | | |/ _ \/ __| 
+ | |___| |_| \__ \ || (_) | | | | | |  ____) | |_| |_| | |  __/\__ \ 
+  \_____\__,_|___/\__\___/|_| |_| |_| |_____/ \__|\__, |_|\___||___/ 
+                                                   __/ |             
+                                                  |___/              
+*/
+
+/* ========= Awaken Admin Theme Styles ========== */
+#cs_footer_logo_upload, #cs_footer_background_image_upload {
+  display: none;
+}
