--- a/style.css
+++ b/style.css
@@ -10183,10 +10183,67 @@ main#main-content { /* add top margin for header */
 }
 
 /* FOOTER */
+footer .col-md-3:nth-child(1), footer .col-md-3:nth-child(4) {
+	width: 28%;
+}
+footer .col-md-3:nth-child(2), footer .col-md-3:nth-child(3) {
+	width: 22%;
+}
+footer .col-md-3:nth-child(2), footer .col-md-3:nth-child(3) {
+	padding-left: 7%;
+	width: 20%;
+}
 
 footer.group .logo img {
 	width: 100%;
+	max-width: 220px;
 }
+
 footer.group .widget_text h2 { /* hide text widget titles */
 	display: none;
+}
+
+footer.group .widget_text .logo {
+	margin-bottom: 25px;
+	border-bottom: 1px solid #000;
+	padding-bottom: 25px;
+}
+
+footer.group .widget_text ul li { 
+	padding: 0px!important;
+	line-height: 22px;
+}
+
+footer.group .widget_text .cta {
+	background-color: #515254;
+	color: #ffffff;
+	text-transform: uppercase;
+	font-weight: bold;
+	margin: 0 0 10px 0;
+	width: 100%;
+	text-align: center;
+	padding: 3px 0;
+}
+
+.footer-widget-cta ul {
+  margin-top: 20px;
+}
+
+
+footer.group .widget_text .footer-widget-cta ul li:after {
+	content: '\f105';
+	font-weight: bold;
+	font-family: 'FontAwesome';
+}
+
+footer.group .widget_text ul li a {
+	text-transform: uppercase;
+	font-weight: bold;
+	padding-right: 9px;
+}
+
+.footer-widget-affiliate a {
+	font-weight: 900;
+	font-size: 25px;
+	line-height: 35px;
 }
