--- a/style.css
+++ b/style.css
@@ -10133,6 +10133,12 @@ h1 {
                                                   |___/              
 */
 
+/* GLOBAL  */
+
+.text-center { text-align: center!important;}
+.left { float: left!important; }
+.right { float: left!important; }
+
 /* TOP NAV CTA */
 nav.top-nav { 
 	float: right;
@@ -10246,4 +10252,49 @@ footer.group .widget_text ul li a {
 	font-weight: 900;
 	font-size: 25px;
 	line-height: 35px;
+}
+
+
+/* HOMEPAGE NEWSLETTER FORM */
+
+body.home section.contact-form {
+	background-color: transparent;
+	background-image: url(assets/images/homepage-contact-form-bg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+}
+
+#contact-form .col-md-12, #contact-form .wpcf7 {
+	margin-bottom: 0px;
+}
+
+#contact-form p {
+	margin-bottom: 30px;
+	text-align: center;
+	text-transform: none;
+	font-size: 20px;
+	color: #ffffff;
+}
+
+#contact-form input[type="text"], #contact-form input[type="email"] {
+	width: 100%;
+	font: 16px 'Open Sans', sans-serif !important;
+	text-transform: uppercase;
+	font-weight: 700!important;
+	border: none;
+}
+#contact-form .row {
+	text-align: center;
+}
+#contact-form input[type="submit"] {
+	background-color: #f8991d;
+	border: none;
+	padding: 15px 75px;
+	
+	font-family: 'Open Sans', sans-serif !important;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: #ffffff;
+	font-size: 20px;
 }
