--- a/style.css
+++ b/style.css
@@ -10300,6 +10300,7 @@ body.home #main-content, .breadcrumb-sec { /* add top margin for header */
 
 
 /* FOOTER */
+/*
 footer .col-md-3:nth-child(1), footer .col-md-3:nth-child(4) {
 	width: 28%;
 }
@@ -10309,6 +10310,28 @@ footer .col-md-3:nth-child(2), footer .col-md-3:nth-child(3) {
 footer .col-md-3:nth-child(2), footer .col-md-3:nth-child(3) {
 	padding-left: 7%;
 	width: 20%;
+}
+*/
+footer .col-md-3 {
+    padding: 40px 24px!important;
+}
+footer .col-md-3:nth-child(1), footer .col-md-3:nth-child(3) {
+	width: 29%;
+}
+footer .col-md-3:nth-child(2) {
+	width: 25%;
+}
+footer .col-md-3:nth-child(4) {
+	width: 17%;
+	padding-right: 0px!important;
+}
+.footer-widget-title {
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    border-bottom: 1px solid;
+    margin-bottom: 25px;
 }
 
 footer.group .logo img {
@@ -10348,9 +10371,11 @@ footer.group .widget_text .cta {
 
 
 footer.group .widget_text .footer-widget-cta ul li:after {
+	/*
 	content: '\f105';
 	font-weight: bold;
 	font-family: 'FontAwesome';
+	*/
 }
 
 footer.group .widget_text ul li a {
@@ -10359,9 +10384,11 @@ footer.group .widget_text ul li a {
 	padding-right: 9px;
 }
 
-.footer-widget-affiliate a {
+.footer-widget-affiliate, .footer-widget-affiliate a {
 	font-weight: 900;
-	font-size: 25px;
+	font-size: 20px;
+}
+.footer-widget-affiliate a {
 	line-height: 35px;
 }
 
