Create custom staff grid page template

--- a/style.css
+++ b/style.css
@@ -10211,7 +10211,7 @@ body.home .breadcrumb-sec {
 }
 	.breadcrumb-sec h1 {
 		font-size: 30px!important;
-		font-weight: 900!important;
+		font-weight: 700!important;
 		color: #ffffff!important;
 	}
 
@@ -10595,3 +10595,19 @@ body.home section.homepage-content-howwework{
 .page-content ~ .page-sidebar {
 	padding: 0px!important;
 }
+
+/* Staff Grid Page Template */
+.page-template-page-staff { 
+
+}
+.page-template-page-staff .main-section h2 {
+	font-size: 25px!important;
+	font-weight: bold!important;
+	text-transform: uppercase;
+}
+.page-template-page-staff .main-section p {
+	font-size: 20px!important;
+}
+
+
+
