Tweak fancybox prev/next position

--- a/style.css
+++ b/style.css
@@ -10651,12 +10651,14 @@ body.home section.homepage-content-howwework{
 	.fancybox-nav {
 		width: 25%!important;
 	}
+	/*
 	.fancybox-next {
 		right: 20px!important;
 	}
 	.fancybox-prev {
 		left: 20px!important;
 	}
+	*/
 
 
 
