--- a/style.css
+++ b/style.css
@@ -10140,6 +10140,16 @@ h1 {
 .right { float: left!important; }
 
 
+/* Header */
+.header-absolute #main-header {
+    left: 0;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 9999!important;
+    box-shadow: 0px -6px 25px 5px #555555;
+}
+
 /* TOP NAV CTA */
 nav.top-nav { 
 	float: right;
