--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,8 +6,16 @@
 .logo-section .container aside.right-side {
 	width: 75%;
 }
-	
-	
+/*
+.page-content {
+	width: 60.25%;
+}
+.page-sidebar {
+	width: 34.75%;
+}
+
+*/
+
 /*============	Media 768Px Start ============ */ 
 @media (min-width: 768px) and (max-width: 990px) {
 	.col-md-4, .col-md-3 { width: 50% !important; }
